--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -16,7 +16,7 @@
 
                     <div class="collapse navbar-collapse" id="navbarsExample07">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active" id="home">
+                            <li class="nav-item" id="home">
                                 <a class="nav-link" href="\trangchu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown" id="course">
@@ -66,7 +66,7 @@
 
         <main role="main" class="inner cover">           
             <h1 class="cover-heading">Developer Việt Nam</h1>
-            <p class="lead">Developer Việt Nam được tạo ra nhằm mục đích cung cấp các bài học hoàn toàn miễn phí về lập trình. Chúng tôi có các bài học từ cơ bản đến nâng cao.</p>
+            <p class="lead">{{ about.content }}</p>
             
         </main>
 
