--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -46,7 +46,7 @@
 				<div class="textbox-group">
 					<div class="row">
 						{% for course in course_list%}
-							<div class="col-md-3 col-lg-3 mt_t20">									
+							<div class="col-md-4 col-lg-4 col-xl-3 mt_t20">
 							<!-- textbox -->
 							<div class="textbox">
 								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
@@ -59,48 +59,6 @@
 							</div><!-- End / textbox -->									
 						</div>
 						{% endfor %}
-						<div class="col-md-3 col-lg-3 mt_t20">
-									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
-									<a href="\khoahoc"><img src="{% static  'image/course/python.png' %}" alt="python"></a>
-								</div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="\khoahoc">Python</a></h2>
-									<div class="textbox__description"><p class="bold">Các bài học về Python từ cơ bản đến nâng cao</p></div>
-								</div>
-							</div><!-- End / textbox -->
-									
-						</div>
-						<div class="col-md-3 col-lg-3 mt_t20">
-									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
-									<a href="#"><img src="{% static  'image/course/reactjs.png' %}" alt="reactjs"></a>
-								</div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">ReactJS</a></h2>
-									<div class="textbox__description"><p class="bold">Các bài học về ReactJS từ cơ bản đến nâng cao</p></div>
-								</div>
-							</div><!-- End / textbox -->
-									
-						</div>
-						<div class="col-md-3 col-lg-3 mt_t20">
-									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
-									<a href="#"><img src="{% static  'image/course/golang.png' %}" alt="golang"></a>
-								</div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
-									<div class="textbox__description"><p class="bold">Các bài học về GoLang từ cơ bản đến nâng cao</p></div>
-								</div>
-							</div><!-- End / textbox -->
-									
-						</div>
 					</div>
 				</div>
 			</div>
