--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -14,17 +14,17 @@
     <section class="md-section">
         <!-- lesson content -->
         <div class="title_lesson">
-            <h5 class="strong_blue">Bài 1: Giới Thiệu</h5>
+            <h5 class="strong_blue">{{lesson.name}}</h5>
         </div>
         <div class="video_lesson">
             <video></video>
         </div>
         <div class="info_lesson mt_t10 row_mr0">
             <div class="row_mr0">
-                <p>100 lượt xem</p>
+                <p>{{lesson.views}} lượt xem</p>
             </div>
             <div class="author ml_20">
-                <p><b>Tác giả:</b> Phan Chí Quang</p>
+                <p><b>Tác giả:</b> {{lesson.author}}</p>
             </div>
         </div>
         <div class="change row_mr0 mt_t10">
