--- a/App/templates/pages/subjects.html
+++ b/App/templates/pages/subjects.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}KhoaHocPython{% endblock %}
+{% block title %}Khóa học {{title}}{% endblock %}
 <!-- banner -->
 {% block banner %}
     <div id="banner_sub">
@@ -11,56 +11,48 @@
 {% block article %}
 {% if message == ''%}
 {% for subject in subject_list%}
-<article class="mt_t20">
-    <div class="container-fluid">       
-        <div class="row mb_20">
-            <div class="title_header">
-                <h3 class="mb-0 bold">{{subject.name}}</h3>
+    <article class="mt_t20">
+        <div class="container-fluid">       
+            <div class="row mb_20">
+                <div class="title_header">
+                    <h3 class="mb-0 bold">{{subject.name}}</h3>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- section -->
-    <section class="md-section">
-        <div class="container-fluid">
-            <div class="row">
-                {% for lessons in lessons_list%}
-                {% if lessons.subject_id_id == subject.subject_id %}
-                <div class="item tns-item tns-slide-active col-md-4 col-lg-3 col-xl-2" id="tns1-item3">
-                    <!-- Card -->
-                    <div class="card  mb-4 card-hover">
-                        <a href="\baihoc" class="card-img-top"><img src="/media/{{ lessons.image }}" alt="{{ lessons.name }}" class="card-img-top rounded-top" title="{{ lessons.name }}"></a>
-                        <!-- Card Body -->
-                        <div class="card-body">
-                            <h5 class="mb-2 text-truncate-line-2 "><a href="\baihoc" class="text-inherit" title="{{ lessons.name }}">{{ lessons.name }}</a></h5>
-                            <!-- List -->
-                            <ul class="mb-3 list-inline">
-                                <li class="list-inline-item"><i class="far fa-clock mr-1"></i>{{ lessons.time }}</li>
-                            </ul>
-                        </div>
-                        <!-- Card Footer -->
-                        <div class="card-footer">
-                            <div class="row align-items-center no-gutters">
-                                <div class="col-auto">
-                                    <img src="" class="rounded-circle avatar-xs" alt="">
-                                </div>
-                                <div class="col ml-2">
-                                    <span>{{ lessons.author }}</span>
-                                </div>
-                                <div class="col-auto">
-                                    <a href="#!" class="text-muted bookmark">
-                                    <i class="fe fe-bookmark  "></i>
-                                    </a>
+        <!-- section -->
+        <section class="md-section">
+            <div class="container-fluid">
+                <div class="row">
+                    {% for lessons in lessons_list%}
+                    {% if lessons.subject_id_id == subject.subject_id %}
+                    <div class="item tns-item tns-slide-active col-md-4 col-lg-3 col-xl-2" id="tns1-item3">
+                        <!-- Card -->
+                        <div class="card  mb-4 card-hover">
+                            <a href="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lessons.lesson_id}}/{{lessons.url_name}}" class="card-img-top"><img src="/media/{{ lessons.image }}" alt="{{ lessons.name }}" class="card-img-top rounded-top" title="{{ lessons.name }}"></a>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                <h5 class="mb-2 text-truncate-line-2 "><a href="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lessons.lesson_id}}/{{lessons.url_name}}" class="text-inherit" title="{{ lessons.name }}">{{ lessons.name }}</a></h5>
+                                <!-- List -->
+                                <ul class="mb-3 list-inline">
+                                    <li class="list-inline-item"><i class="far fa-clock mr-1"></i>{{ lessons.time }}</li>
+                                </ul>
+                            </div>
+                            <!-- Card Footer -->
+                            <div class="card-footer">
+                                <div class="row align-items-center no-gutters">
+                                    <div class="col ml-2">
+                                        <span>{{ lessons.author }}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    {% endif %}
+                    {% endfor%}
                 </div>
-                {% endif %}
-                {% endfor%}
             </div>
-        </div>
-    </section>
-</article>
+        </section>
+    </article>
 {% endfor%}
 {% endif %}
 {% if message != '' %}
