--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -54,7 +54,7 @@
 								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="/khoahoc/{{course_list.course_id}}">{{course.name}}</a></h2>
-									<div class="textbox__description"><p class="bold">{{course.content|safe|linebreaks}}</p></div>
+									<div class="textbox__description"><p class="bold">{{course.about}}</p></div>
 								</div>
 							</div><!-- End / textbox -->									
 						</div>
