--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -13,9 +13,9 @@
                 <li class="nav-item dropdown" id="course">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
-                        <a class="dropdown-item" href="#">Python</a>
-                        <a class="dropdown-item" href="#">ReactJS</a>
-                        <a class="dropdown-item" href="#">GoLang</a>
+                        {% for course in course_list%}
+                        <a class="dropdown-item" href="/khoahoc/{{course.course_id}}">{{course.name}}</a>
+                        {% endfor %}
                     </div>
                 </li>
                 <li class="nav-item" id="document">
