--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -22,9 +22,9 @@
                             <li class="nav-item dropdown" id="course">
                                 <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                    <a class="dropdown-item drop_hearder" href="#">Python</a>
-                                    <a class="dropdown-item drop_hearder" href="#">ReactJS</a>
-                                    <a class="dropdown-item drop_hearder" href="#">GoLang</a>
+                                    {% for course in course_list%}
+                                        <a class="dropdown-item" href="/khoahoc/{{course.course_id}}">{{course.name}}</a>
+                                    {% endfor %}
                                 </div>
                             </li>
                             <li class="nav-item" id="document">
@@ -77,9 +77,9 @@
                 <div class="btn-group mt_t10">
                     <button type="button" class="btn-lg btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</button> 
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Python</a>
-                        <a class="dropdown-item" href="#">ReactJS</a>
-                        <a class="dropdown-item" href="#">GoLang</a>
+                        {% for course in course_list%}
+                            <a class="dropdown-item" href="/khoahoc/{{course.course_id}}">{{course.name}}</a>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
