--- a/App/templates/base_les.html
+++ b/App/templates/base_les.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <!-- footer -->
-        <footer class="bg-dark bg-cover footer mt_t30">
+        <footer class="bg-cover footer mt_t30">
             <div class="py-6">
                 <div class="container-fluid">
                         <!-- Copyright -->
