--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -25,10 +25,10 @@
                     <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
                 </li>
                 <li class="nav-item" id="contact">
-                    <a class="nav-link" href="\dangnhap">Liên Hệ</a>
+                    <a class="nav-link" href="\lienhe">Liên Hệ</a>
                 </li>
                 <li class="nav-item" id="sponsorship">
-                    <a class="nav-link" href="\dangnhap">Tài trợ</a>
+                    <a class="nav-link" href="\taitro">Tài trợ</a>
                 </li>                        
             </ul>
             <form class="form-inline my-2 my-md-0">
