--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -34,10 +34,10 @@
                                 <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
                             </li>
                             <li class="nav-item" id="contact">
-                                <a class="nav-link" href="#">Liên Hệ</a>
+                                <a class="nav-link" href="\lienhe">Liên Hệ</a>
                             </li>
                             <li class="nav-item" id="sponsorship">
-                                <a class="nav-link" href="#">Tài trợ</a>
+                                <a class="nav-link" href="\taitro">Tài trợ</a>
                             </li>                        
                         </ul>
                     <form class="form-inline my-2 my-md-0">
@@ -72,8 +72,8 @@
 
         <footer class="mastfoot mt-auto text-center">
             <div class="row footer_btn">
-                <button type="button" class="btn btn-primary btn-lg mr_20 mt_t10">Liên Hệ Chúng Tôi</button>
-                <button type="button" class="btn btn-danger btn-lg mr_20 mt_t10">Tài Trợ</button>
+                <button type="button" class="btn btn-primary btn-lg mr_20 mt_t10" formaction ="\lienhe">Liên Hệ Chúng Tôi</button>
+                <button type="button" class="btn btn-danger btn-lg mr_20 mt_t10" formaction ="\taitro">Tài Trợ</button>
                 <div class="btn-group mt_t10">
                     <button type="button" class="btn-lg btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</button> 
                     <div class="dropdown-menu">
