--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -3,7 +3,7 @@
 {% block title %}GioiThieu{% endblock %}
 <!-- article -->
 {% block article %}
-<article class="col-md-12 col-sm-12 col-lg-8 col-xl-9 article_area mt_t10">   
+<article class="col-md-12 col-sm-12 col-lg-8 col-xl-9 article_area mt_t10">
     <div class="row mb_20 padding_lr15">
         <div class="title_header">
             <h4 class="mb-0 bold">{{subject.name}}</h4>
@@ -79,7 +79,7 @@
                                 <p>Chủ tài khoản: PHAN CHI QUANG</p>
                             </div>
                             <div class="card-footer">
-                                <p class="bold">Ngân hàng Tackcombank</p>
+                                <p class="bold">Ngân hàng Teckcombank</p>
                             </div>
                         </div>
                     </div>
