--- a/App/templates/pages/register.html
+++ b/App/templates/pages/register.html
@@ -30,7 +30,7 @@
         <div class="text-left mt_t10 bold">
             <a href="\dangnhap" class="blue">Tôi đã có tài khoản!</a>
         </div>
-        <p class="mt-5 text-muted">© 2021 All rights reserved.<br>Designed by DeveloperVN.</p>
+        <p class="mt-5 text-muted">© Bản quyền thuộc về <b>Developer Việt Nam</b>.<br>Thiết kế và hoạn thện bở <b>Developer Việt Nam</b>.</p>
     </form>
 </body>
 {% endblock %}
