--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -41,7 +41,7 @@
         {% block aside %}{% endblock %}
         </div>
         <!-- footer -->
-        <footer class="bg-dark bg-cover footer mt_t30">
+        <footer class="bg-cover footer mt_t30">
             <div class="py-6">
                 <div class="container-fluid">
                     <!-- Copyright -->
