--- a/App/templates/pages/sign_in.html
+++ b/App/templates/pages/sign_in.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         <a href="\trangchu"><img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
         <h1 class="h3 mb-3 font-weight-normal">Vui Lòng Nhập Tài Khoản</h1>
-        <label for="email" class="sr-only">Địa chỉ Email</label>
+        <label for="account" class="sr-only">Tên người dùng/ Địa chỉ Email</label>
         <input type="text" id="account" name="account" class="form-control" placeholder="Tên người dùng/ Địa chỉ Email" required="" autofocus="">
         <label for="password" class="sr-only">Mật Khẩu</label>
         <input type="password" id="password" name="password" class="form-control" placeholder="Mật Khẩu" required="">
@@ -20,7 +20,7 @@
         <div class="text-left mt_t10 bold">
             <a href="\dangky" class="blue">Bạn chưa có tài khoản?</a>
         </div> 
-        <p class="mt-5 text-muted">© 2021 All rights reserved.<br>Designed by DeveloperVN.</p>
+        <p class="mt-5 text-muted">© Bản quyền thuộc về <b>Developer Việt Nam</b>.<br>Thiết kế và hoạn thện bở <b>Developer Việt Nam</b>.</p>
     </form>
 </body>
 {% endblock %}
