--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -46,7 +46,7 @@
                     </div>
 
                 {% elif user.username == ''%}
-                    <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
+                    <button class="btn btn-sm btn-rs text-while mr_5" formaction ="\dangky">Đăng Ký</button>
                     <button class="btn btn-sm btn-rs text-while" formaction ="\dangnhap">Đăng Nhập</button>
                 {% endif %}
             </form>
