--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -110,9 +110,6 @@ img {
 .item{
     padding: 0px 5px;
 }
-.form-inline button{
-    margin-left: 10px;
-}
 .btn-rs{
     background-color: #0288d1;
     border-color: #0288d1;
@@ -167,9 +164,9 @@ video{
     font-weight: bold; 
     border-bottom: 1px solid black;
 }
-.les_header h4, .sub_header h4{
+/*.les_header h4, .sub_header h4{
     color: antiquewhite;
-}
+}*/
 .lesson_more .les_content{
     width: 100%;
 }
@@ -243,3 +240,7 @@ video{
     position: relative;
     z-index:1;
 }*/
+.card-header{
+    background-color: #afc2d3 !important;
+    border-bottom: 1px solid #afc2d3 !important;
+}
