--- a/App/templates/pages/contact.html
+++ b/App/templates/pages/contact.html
@@ -12,7 +12,27 @@
                             <h4>Kênh liên hệ trực tiếp</h4>
                         </div>
                         <div class="card-body">
-                            <p>Mọi thông tin đóng góp ý kiến hoặc hỗ trợ, mọi người có thể liên hệ trực tiếp qua các kênh sau:</p>
+                            <p class="mb_30">Mọi thông tin đóng góp ý kiến hoặc hỗ trợ, mọi người có thể liên hệ trực tiếp qua các kênh sau:</p>
+                            <div class="mb_20">
+                                <div class="row_mr0">
+                                    <i class="fas fa-phone-square-alt fs_xx-large"></i><h5 class="ml_10">0977224791</h5>
+                                </div>
+                            </div>
+                            <div class="mb_20">
+                                <div class="row_mr0">
+                                    <i class="fas fa-envelope-square fs_xx-large"></i><h5 class="ml_10">quangpc.developervietnam@gamil.com</h5>
+                                </div>
+                            </div>
+                            <div class="mb_20">
+                                <div class="row_mr0">
+                                    <i class="fab fa-facebook-square fs_xx-large"></i><a href="#"><h5 class="ml_10">Developer Việt Nam</h5></a>
+                                </div>
+                            </div>
+                            <div class="mb_20">
+                                <div class="row_mr0">
+                                    <i class="fab fa-youtube-square fs_xx-large"></i><a href="#"><h5 class="ml_10">Developer Việt Nam</h5></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
