--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -28,12 +28,32 @@
             </div>
         </div>
         <div class="change row_mr0 mt_t10">
-            <div class="previous_lesson mr_10">
-                <button class="btn btn-sm btn-rs text-while" title="bài học trước"><i class="fas fa-angle-double-left"></i></button>
-            </div>
-            <div class="next_lesson">
-                <button class="btn btn-sm btn-rs text-while" title="bài học sau"><i class="fas fa-angle-double-right"></i></button>
-            </div>
+            <form class="form-inline">
+                <div class="previous_lesson mr_10">
+                    {% if disable_prev == "" %}
+                        <button class="btn btn-sm btn-rs text-while" title="bài học trước" {{ disable_prev }} formaction ="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lesson_prev.lesson_id}}/{{lesson_prev.url_name}}">
+                            <i class="fas fa-angle-double-left"></i>
+                        </button>
+                    {% endif %}
+                    {% if disable_prev != "" %}
+                        <button class="btn btn-sm btn-rs text-while" title="bài học trước" {{ disable_prev }}>
+                            <i class="fas fa-angle-double-left"></i>
+                        </button>
+                    {% endif %}
+                </div>
+                <div class="next_lesson">
+                    {% if disable_next == "" %}
+                        <button class="btn btn-sm btn-rs text-while" title="bài học sau" {{ disable_next }} formaction ="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lesson_next.lesson_id}}/{{lesson_next.url_name}}">
+                            <i class="fas fa-angle-double-right"></i>
+                        </button>
+                    {% endif %}
+                    {% if disable_next != "" %}
+                        <button class="btn btn-sm btn-rs text-while" title="bài học sau" {{ disable_next }}>
+                            <i class="fas fa-angle-double-right"></i>
+                        </button>
+                    {% endif %}
+                </div>
+            </form>
         </div>
         <div class="content_lesson mb_20 mt_t10">
             <div class="card box-shadow">
@@ -49,68 +69,50 @@
         <div class="gooogle_adv_hori">
             <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
         </div>
+        <!-- subject more -->
+        <div class="content_lesson mb_20 mt_t10">
+            <div class="card box-shadow">
+                <div class="card-header">
+                    <h4>Khóa học khác</h4>
+                </div>
+                <div class="card-body sub_content nopadding">
+                    <div class="row_mr0">
+                        {% for course in course_list%}
+                        <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4 padding_10">
+                            <div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
+                                <a href="/khoahoc/{{course.course_id}}"><img src="/media/{{course.image}}" alt="{{course.name}}" title="{{course.name}}"></a>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- sponsor information -->
         <div class="card box-shadow support mb_20 mt_t10">
             <div class="card-header title_support">
                 <h4>Thông tin tài khoản nhận tài trợ</h4>
             </div>
             <div class="card-body">
+                <p>Hỡ trợ giúp <b>developer Việt Nam</b> có kinh phí xây dựng nhiều khóa học hơn.</p>
+                <p>Hãy gửi cho chúng tôi biết <b>Tên</b> và <b>Thông điệp</b> của bạn khi tài trợ nhé.
                 <div class="row_mr0">
-                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
+                    {% for info_account in info_account_list%}
+                    <div class="lesson_next col-md-4 col-sm-6 col-xl-3 col-lg-6 padding_5">
                         <div class="card">
                             <div class="image_bank">
-                                <img src="{% static 'image/bank/tpbank.jpg' %}" alt="" class="card-img-top rounded-top">
+                                <img src="/media/{{info_account.image}}" alt="{{info_account.name}}" class="card-img-top rounded-top">
                             </div>
                             <div class="card-body info_bank">
-                                <p>Số tài khoản: 01903294701</p>
-                                <p>Chủ tài khoản: PHAN CHI QUANG</p>
+                                <p>{{info_account.account|safe|linebreaks}}</p>
+                                <p>{{info_account.recipients|safe|linebreaks}}</p>
                             </div>
                             <div class="card-footer">
-                                <p class="bold">Ngân hàng TPBank</p>
+                                <p>{{info_account.name|safe|linebreaks}}</p>
                             </div>
                         </div>
                     </div>
-                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                        <div class="card">
-                            <div class="image_bank">
-                                <img src="{% static 'image/bank/Teckcombank.png' %}" alt="" class="card-img-top rounded-top">
-                            </div>
-                            <div class="card-body info_bank">
-                                <p>Số tài khoản: 01903294701</p>
-                                <p>Chủ tài khoản: PHAN CHI QUANG</p>
-                            </div>
-                            <div class="card-footer">
-                                <p class="bold">Ngân hàng Teckcombank</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                        <div class="card">
-                            <div class="image_bank">
-                                <img src="{% static 'image/bank/momo.jpg' %}" alt="" class="card-img-top rounded-top">
-                            </div>
-                            <div class="card-body info_bank">
-                                <p>Số điện thoại: 0977224791</p>
-                                <p>Tên tài khoản: PHAN CHI QUANG</p>
-                            </div>
-                            <div class="card-footer">
-                                <p class="bold">Ví Momo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                        <div class="card">
-                            <div class="image_bank">
-                                <img src="{% static 'image/bank/ZaloPay.png' %}" alt="" class="card-img-top rounded-top">
-                            </div>
-                            <div class="card-body info_bank">
-                                <p>Số điện thoại: 0977224791</p>
-                                <p>Tên tài khoản: PHAN CHI QUANG</p>
-                            </div>
-                            <div class="card-footer">
-                                <p class="bold">Ví ZaloPay</p>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -166,24 +168,6 @@
     <!-- <div class="gooogle_adv_verti mt_t10">
         <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
     </div> -->
-    <!-- subject more -->
-    <div class="card box-shadow subject_more mt_t10">
-        <!-- header -->
-        <div class="card-header sub_header">
-            <h4>Khóa học khác</h4>
-        </div>
-        <div class="card-body sub_content nopadding">
-            <div class="row_mr0">
-                {% for course in course_list%}
-                <div class="col-md-4 col-sm-4 padding_10">
-                    <div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-                        <a href="/khoahoc/{{course.course_id}}"><img src="/media/{{course.image}}" alt="{{course.name}}" title="{{course.name}}"></a>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
     <!-- google advertisement -->
     <div class="gooogle_adv_verti mt_t10">
         <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
@@ -197,7 +181,7 @@
         <!-- content --> 
         <div class="card-body les_content padding_5">
             {% for lesson_list in lesson_list%}
-                <div class="les_row">
+                <div class="les_row padding_5">
                     <div class="video_more mr_5">
                         <a href="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lesson_list.lesson_id}}/{{lesson_list.url_name}}" class="card-img-top">
                             <img src="/media/{{ lesson_list.image }}" alt="{{ lesson_list.name }}" class="card-img-top rounded-top" title="{{ lesson_list.name }}">
