--- a/App/templates/pages/sign_in.html
+++ b/App/templates/pages/sign_in.html
@@ -20,7 +20,7 @@
         <div class="text-left mt_t10 bold">
             <a href="\dangky" class="blue">Bạn chưa có tài khoản?</a>
         </div> 
-        <p class="mt-5 text-muted">© Bản quyền thuộc về <b>Developer Việt Nam</b>.<br>Thiết kế và hoạn thện bở <b>Developer Việt Nam</b>.</p>
+        <p class="mt-5 text-muted">© Bản quyền thuộc về <b>Developer Việt Nam</b>.<br>Thiết kế và hoàn thiện bởi <b>Developer Việt Nam</b>.</p>
     </form>
 </body>
 {% endblock %}
