--- a/App/templates/pages/sponsor.html
+++ b/App/templates/pages/sponsor.html
@@ -1,6 +1,6 @@
 {% extends "base_les.html" %}
 {% load static %}
-{% block title %}Liên Hệ{% endblock %}
+{% block title %}Tài Trợ{% endblock %}
 <!-- article -->
 {% block article %}
     <article class="article_area mt_t10">
@@ -12,8 +12,14 @@
                             <h4>Danh sách người ủng hộ</h4>
                         </div>
                         <div class="card-body">
-                            <p><b>Developer Việt Nam</b> biết ơn rất nhiều những người đã ủng hộ và đồng hành cùng chúng tôi. Chúng tôi luôn lấy đó làm động lực để cố gắng hết sức xây dựng những khóa học hay và bổ ích.</p>
-                            <p class="bold">Chúng tôi xin chân thành cảm ơn!</p>
+                            <p><b>Developer Việt Nam</b> biết ơn rất nhiều những cá nhân, tổ chức đã ủng hộ và đồng hành cùng chúng tôi. Chúng tôi luôn lấy đó làm động lực để cố gắng hết sức xây dựng những khóa học hay và bổ ích.</p>
+                            <p class="bold">Chúng tôi xin chân thành cảm ơn các cá nhân, tổ chức sau:</p>
+                            {% for sponsor in sponsor_list%}
+                            <div class="mt_t30 mb_30 lh_5">
+                                <p><b>{{sponsor.sender}}</b> đã ủng hộ <b>{{sponsor.money}}</b> qua <b>{{sponsor.Info_Account.name}}</b></p>
+                                <p>{{sponsor.message}}<p>
+                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -23,64 +29,25 @@
                             <h4 class="text-center">Thông tin tài khoản nhận tài trợ</h4>
                         </div>
                         <div class="card-body">
-                            <p>Hỡ trợ để <b>developer Việt Nam</b> có kinh phí xây dựng nhiều khóa học hơn.</p>
+                            <p>Ủng hộ giúp <b>developer Việt Nam</b> có kinh phí xây dựng nhiều khóa học hơn.</p>
+                            <p>Hãy gửi cho chúng tôi biết <b>Tên</b> và <b>Thông điệp</b> của bạn khi tài trợ nhé.
                             <div class="row_mr0">
+                                {% for info_account in info_account_list%}
                                 <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
                                     <div class="card">
                                         <div class="image_bank">
-                                            <img src="{% static 'image/bank/tpbank.jpg' %}" alt="" class="card-img-top rounded-top">
+                                            <img src="/media/{{info_account.image}}" alt="{{info_account.name}}" class="card-img-top rounded-top">
                                         </div>
                                         <div class="card-body info_bank">
-                                            <p>Số tài khoản: 01903294701</p>
-                                            <p>Chủ tài khoản: PHAN CHI QUANG</p>
+                                            <p>{{info_account.account|safe|linebreaks}}</p>
+                                            <p>{{info_account.recipients|safe|linebreaks}}</p>
                                         </div>
                                         <div class="card-footer">
-                                            <p class="bold">Ngân hàng TPBank</p>
+                                            <p>{{info_account.name|safe|linebreaks}}</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                                    <div class="card">
-                                        <div class="image_bank">
-                                            <img src="{% static 'image/bank/Teckcombank.png' %}" alt="" class="card-img-top rounded-top">
-                                        </div>
-                                        <div class="card-body info_bank">
-                                            <p>Số tài khoản: 01903294701</p>
-                                            <p>Chủ tài khoản: PHAN CHI QUANG</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <p class="bold">Ngân hàng Teckcombank</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                                    <div class="card">
-                                        <div class="image_bank">
-                                            <img src="{% static 'image/bank/momo.jpg' %}" alt="" class="card-img-top rounded-top">
-                                        </div>
-                                        <div class="card-body info_bank">
-                                            <p>Số điện thoại: 0977224791</p>
-                                            <p>Tên tài khoản: PHAN CHI QUANG</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <p class="bold">Ví Momo</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
-                                    <div class="card">
-                                        <div class="image_bank">
-                                            <img src="{% static 'image/bank/ZaloPay.png' %}" alt="" class="card-img-top rounded-top">
-                                        </div>
-                                        <div class="card-body info_bank">
-                                            <p>Số điện thoại: 0977224791</p>
-                                            <p>Tên tài khoản: PHAN CHI QUANG</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <p class="bold">Ví ZaloPay</p>
-                                        </div>
-                                    </div>
-                                </div>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
