--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -50,7 +50,7 @@
                                     <a class="dropdown-item" href="#"><i class="fas fa-info-circle mr_5"></i>Thông tin</a>
                                     <a class="dropdown-item" href="#"><i class="fas fa-key mr_5"></i>Đổi mật khẩu</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="\dangxuat"><i class="fas fa-sign-out-alt mr_5"></i>Đăng xuất</a>
+                                    <a class="dropdown-item" href="\dangxuat?path={{request.path}}"><i class="fas fa-sign-out-alt mr_5"></i>Đăng xuất</a>
                                 </div>
                             </div>
 
