--- a/App/templates/pages/sign_in.html
+++ b/App/templates/pages/sign_in.html
@@ -4,7 +4,7 @@
 <!-- body -->
 {% block body %}
 <body class="text-center" style="background-image: url({% static 'image/background/sign_in.png' %})">
-    <form class="form-signin" action="\dangnhaptaikhoan" method="post">
+    <form class="form-signin" action="\dangnhaptaikhoan?path={{path}}" method="post">
         {% csrf_token %}
         <a href="\trangchu"><img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
         <h1 class="h3 mb-3 font-weight-normal">Vui Lòng Nhập Tài Khoản</h1>
