--- a/App/templates/pages/contact.html
+++ b/App/templates/pages/contact.html
@@ -13,25 +13,33 @@
                         </div>
                         <div class="card-body">
                             <p class="mb_30">Mọi thông tin đóng góp ý kiến hoặc hỗ trợ, mọi người có thể liên hệ trực tiếp qua các kênh sau:</p>
-                            <div class="mb_20">
+                            <div class="mb_40">
                                 <div class="row_mr0">
-                                    <i class="fas fa-phone-square-alt fs_xx-large"></i><h5 class="ml_10">0977224791</h5>
+                                    <i class="fas fa-phone-square-alt fs_xx-large"></i><h5 class="ml_10">Số điện thoại</h5>                                   
                                 </div>
+                                <h5 class="padding_lef_40">0977224791</h5>
                             </div>
-                            <div class="mb_20">
+                            <div class="mb_40">
                                 <div class="row_mr0">
-                                    <i class="fas fa-envelope-square fs_xx-large"></i><h5 class="ml_10">quangpc.developervietnam@gamil.com</h5>
+                                    <i class="fas fa-envelope-square fs_xx-large"></i><h5 class="ml_10">Gmail</h5>                                   
                                 </div>
+                                <h5 class="padding_lef_40">quangpc.developervietnam@gamil.com</h5>
                             </div>
-                            <div class="mb_20">
+                            <div class="mb_40">
                                 <div class="row_mr0">
-                                    <i class="fab fa-facebook-square fs_xx-large"></i><a href="#"><h5 class="ml_10">Developer Việt Nam</h5></a>
+                                    <i class="fab fa-facebook-square fs_xx-large"></i><h5 class="ml_10">Facebook</h5>                                   
                                 </div>
+                                <a href="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362" target="_blank">
+                                    <h5 class="padding_lef_40">Developer Việt Nam</h5>
+                                </a>
                             </div>
-                            <div class="mb_20">
+                            <div class="mb_40">
                                 <div class="row_mr0">
-                                    <i class="fab fa-youtube-square fs_xx-large"></i><a href="#"><h5 class="ml_10">Developer Việt Nam</h5></a>
+                                    <i class="fab fa-youtube-square fs_xx-large"></i><h5 class="ml_10">Youtube</h5>                                   
                                 </div>
+                                <a href="https://www.youtube.com/channel/UCHPkw9hVi3hLkYkin_DlpYQ" target="_blank">
+                                    <h5 class="padding_lef_40">Developer Việt Nam</h5>
+                                </a>
                             </div>
                         </div>
                     </div>
