--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="\lienhe">Liên Hệ</a>
                 </li>
                 <li class="nav-item" id="sponsorship">
-                    <a class="nav-link" href="\taitro">Tài trợ</a>
+                    <a class="nav-link" href="\taitro">Tài Trợ</a>
                 </li>                        
             </ul>
             <form class="form-inline my-2 my-md-0">
