--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -118,30 +118,53 @@
         </div>
         <!-- lesson next -->
         <div class="lesson_next_more mt_t10">
-            <div class="les_title">
-                <div class="left">
-                    <h5 class="bold">Chia sẻ kiến thức</h5>
+            <div class="card box-shadow support mb_20 mt_t10">
+                <div class="card-header">
+                    <a href="#"><h4>Chia sẻ <i class="fas fa-angle-double-right ml_10"></i></h4></a>
                 </div>
-                <div class="right">
-
-                </div>
-            </div>
-            <div class="les_row">
-                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                    <div class="video_next"><video></video></div>
-                    <div class="title_next"><a href="#"><h5 class="font_size_init" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a></div>
-                </div>
-                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                    <div class="video_next"><video></video></div>
-                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
-                </div>
-                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                    <div class="video_next"><video></video></div>
-                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
-                </div>
-                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
-                    <div class="video_next"><video></video></div>
-                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
+                <div class="card-body sub_content nopadding">
+                    <div class="row_mr0">
+                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
+                            <div class="card">
+                                <div class="image_share">
+                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
+                                </div>
+                                <div class="card-body info_bank">
+                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản một bài học hữu ích vãi cả lò</h5></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
+                            <div class="card">
+                                <div class="image_share">
+                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
+                                </div>
+                                <div class="card-body info_bank">
+                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
+                            <div class="card">
+                                <div class="image_share">
+                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
+                                </div>
+                                <div class="card-body info_bank">
+                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
+                            <div class="card">
+                                <div class="image_share">
+                                    <img src="/media/lesson/course-python.jpg" alt="" class="card-img-top rounded-top">
+                                </div>
+                                <div class="card-body info_bank">
+                                    <a href="#"><h5 class="font_size_init title_share" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -188,7 +211,7 @@
                         </a>
                     </div>
                     <div class="title_more">
-                        <a href="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lesson_list.lesson_id}}/{{lesson_list.url_name}}" title="{{lesson_list.name}}"><h5 class="font_size_init">{{lesson_list.name}}</h5></a>
+                        <a href="/khoahoc/{{subject.course_id_id}}/{{subject.subject_id}}/{{lesson_list.lesson_id}}/{{lesson_list.url_name}}" title="{{lesson_list.name}}"><h5 class="font_size_init lh_20">{{lesson_list.name}} một bài học hữu ích</h5></a>
                     </div>
                 </div>
             {% endfor %}
