--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -197,7 +197,7 @@ video{
     width: 100%;
     height: auto;
 }
-.title_next h5, .title_more h5{
+.title_share{
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
