--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -19,7 +19,7 @@
                     </div>
                 </li>
                 <li class="nav-item" id="document">
-                    <a class="nav-link" href="\gioithieu">Chia Sẻ Kiến Thức</a>
+                    <a class="nav-link" href="\gioithieu">Chia Sẻ</a>
                 </li>
                 <li class="nav-item" id="about">
                     <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
