--- a/App/templates/pages/contact.html
+++ b/App/templates/pages/contact.html
@@ -13,6 +13,21 @@
                         </div>
                         <div class="card-body">
                             <p class="mb_30">Mọi thông tin đóng góp ý kiến hoặc hỗ trợ, mọi người có thể liên hệ trực tiếp qua các kênh sau:</p>
+                            {% for contact_libe in contact_live_list%}
+                            <div class="mb_40">
+                                <div class="row_mr0">
+                                    {{contact_libe.icon|safe}}<h5 class="ml_10">{{contact_libe.name}}</h5>
+                                </div>
+                                {% if contact_libe.url != null%}
+                                    <a href="{{ contact_libe.url }}" target="_blank">
+                                        <h5 class="padding_lef_38">{{contact_libe.content}}</h5>
+                                    </a>
+                                {% endif %}
+                                {% if contact_libe.url == null%}
+                                    <h5 class="padding_lef_38">{{contact_libe.content}}</h5>
+                                {% endif %}
+                            </div>
+                            {% endfor %}
                             <div class="mb_40">
                                 <div class="row_mr0">
                                     <i class="fas fa-phone-square-alt fs_xx-large"></i><h5 class="ml_10">Số điện thoại</h5>
@@ -51,13 +66,14 @@
                         </div>
                         <div class="card-body">
                             <p>Nếu có bất kỳ góp ý hay có yêu cầu gì cho <b>developer Việt Nam</b> thì hãy vui lòng gửi cho chúng tôi.</p>
-                            <form class="form-contact" action="" method="post">
+                            <form class="form-contact" action="\guilienhe?path={{request.path}}" method="post">
+                                {% csrf_token %}
                                 <label for="fullname" class="mt_t20 bold">Họ và tên</label>
                                 <input type="text" id="fullname" name="fullname" class="form-control" placeholder="Họ và tên" required="" autofocus="" maxlength="50">
                                 <label for="email" class="mt_t30 bold">Địa chỉ email</label>
                                 <input type="email" id="email" name="email" class="form-control" placeholder="Địa chỉ email" required="">
                                 <label for="phone" class="mt_t30 bold">Số điện thoại</label>
-                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Số điện thoại" required="" maxlength="11">
+                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Số điện thoại" required="" maxlength="13">
                                 <label for="content" class="mt_t30 bold">Nội dung liên hệ</label>
                                 <textarea type="text" id="content" name="content" class="form-control" placeholder="Nội dung liên hệ" required="" rows="10"></textarea>
                                 <button class="btn btn-lg btn-rs btn-block mt_t30 bold" type="submit"><i class="fas fa-paper-plane fa-fw mr_5"></i>Gửi liên hệ</button>
@@ -67,6 +83,11 @@
                 </div>
             </div>
         </section>
+        {% if  message == 'true' %}
+            <div class="mt_t10" style="background-color: #ddffdd">
+                <p class="padding_15 bold"><i class="far fa-check-circle mr_5"></i>Gửi thành công! Chúng tôi sẽ trả lờ bạn sớm nhất có thể.</p>
+            </div>
+        {% endif %}
     </article>
 {% endblock %}
  <!-- aside -->
